Do an exact match of the color if threshold is set to 1

If the threshold is set to 1, checking the difference between
colors through a conversion to lab and cmsDeltaE will not be
precise enough. A threshold of 1 means that no difference at
all is allowed.

This patch checks in relevant places whether the threshold is
1 and then does a memcmp.

BUG:385160